02_jboss_sample/023_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jboss
  name: jboss-active
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: management
    port: 9990
    protocol: TCP
    targetPort: 9990
  selector:
    app: jboss
  type: ClusterIP

---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: jboss
#   name: jboss-preview 
# spec:
#   ports:
#   - name: http
#     port: 8080
#     protocol: TCP
#     targetPort: 8080
#   - name: management
#     port: 9990
#     protocol: TCP
#     targetPort: 9990
#   selector:
#     app: jboss
#   type: ClusterIP
